テンプレ作った

--- a/beamer_sample.tex
+++ b/beamer_sample.tex
@@ -35,42 +35,42 @@
   \tableofcontents
 \end{frame}
 
-\section{はじめに} %目次に表示するスライド名
-\begin{frame}{何を問題としているか} %スライドのタイトル
+\section{研究背景} %目次に表示するスライド名
+\begin{frame}{研究背景} %スライドのタイトル
  \begin{itemize}
-  \item こんなこと
-  \item あんなこと
-  \item しかも\alert{そんなことまで}
+  \item グリッパの自動交換
+  \item 複雑な把持計画
+  \item これらの作業は\alert{ボトルネック}
  \end{itemize}
 \end{frame} 
 
-\section{手始めに}
+\section{MR$\alpha$流体グリッパ}
 
-\subsection{Blockの使い方}
-\begin{frame}{さまざまなBlock}
-\begin{block}{ブロック} 
-これがblock環境だ。
+\subsection{原理}
+\begin{frame}{原理}
+\begin{block}{MR流体} 
+磁界で変化
 \end{block}
-\begin{example}
-これはexample blockである。
+\begin{example}{ER流体}
+電界で変化
 \end{example}
 
 \pause　%アニメーション：後から表示する
-\begin{alertblock}{警告ブロック}
-alert block環境ではこうなる。
+\begin{alertblock}{結果}
+MR流体のほうがいいね
 \end{alertblock}
 \end{frame}
 
 
 
-\section{図表の貼り込み}
+\section{写真}
 
 \subsection{図}
 
-\begin{frame}{PDF画像}
-PDF形式の画像も、xbbファイル(extractbbで生成する)を用意しておけば、この通り。
+\begin{frame}{概要図}
+MR$\alpha$流体グリッパ
 \begin{figure}
-\includegraphics[scale=0.21]{image/lorenz_flow.pdf}
+\includegraphics[scale=1,bb = 0 0 171 171]{fig/s_gripperp.png}
 \end{figure}
 \end{frame}
 
