add wiki directory

--- a/beamer_sample.tex
+++ b/beamer_sample.tex
@@ -56,9 +56,12 @@
 \section{MR$\alpha$流体グリッパ}
 
 \subsection{原理}
+
+
+
 \begin{frame}{原理}
-\begin{block}{MR流体} 
-磁界で変化
+\begin{block}{ラベル} 
+内容
 \end{block}
 \begin{block}{ER流体}
 電界で変化
